**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 3.2                                 *
*	LAST UPDATE: Apr 27 2017                     *
*                                                *
**************************************************

Update: May 4th 2017
==================================================
->Added python class AnalysisSuiteVFATNoise for determining the avg & std. dev noise, pedestal, and threshold in a given (ieta,iphi) sector based on data from P5
->Python class PARAMS_ETASECTOR in Utilities.py will now store a list of boundaries for the iphi sectors
->Python class PARAMS_ETASECTOR has new method calcBoundaries() for determining boundaries for iphi sectors
->Method calcROSectorBoundaries in python class PARAMS_DET will either return the stored list from the PARAMS_ETASECTOR object or calculate the boundaries and then return them
->Python class AnalysisSuiteClusterCharge's method checkIfDataPtInRange will now accept a point that is within 10% of the data to be interpolated

Update: Apr 27th 2017
==================================================
->Attempting to reduce memory by using sloting in python classes
->Attempting to reduce memory by using formating instead of string addition e.g. "{0}_{1}".format(a,b) instead of a + b

Update: Apr 26th 2017
==================================================
->Python class AnalysisSuiteGainMap will now take an outputfilename and an outputfileoption upon initialization

Update: Apr 25th 2017
==================================================
->The calcGainMapHV method of the python class AnalysisSuiteGainMap will now return the TGraph2D object it makes
->New config file config/configEffPredictor.cfg for automatizing efficiency predictor and also calculating gain maps
->New python class AnalysisSuiteEfficiencyPredictor added to python toolkit at python/AnalysisSuiteEfficiencyPredictor.py
